adjust to stefantrauth.de

--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -1,10 +1,10 @@
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="kontakt" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact</h2>
-                <p>Dolor reprehenderit repellendus, optio labore odio at tempore debitis nisi. Quasi debitis tenetur eaque molestias non porro odio sapiente.</p>
-                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                <h2>Kontakt</h2>
+                <p>Ich freue mich über nette Nachrichten. Am besten per Mail.</p>
+                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>, <a href="mail@stefantrauth.de.asc">PGP</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
