--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
-        </div>
+            <p>Foto: <a href="http://pixabay.com">Pixbay.com</a>, <a href="impressum.html">Impressum</a></p>
     </footer>
