--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
     {% include nav.html %}
     {% include header.html %}
     {% include about.html %}
-    {% include download.html %}
-    {% include contact.html %}
-    {% include map.html %}
+    {% include blog.html %}
+    {% include podcast.html %}
+    {% include kontakt.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
