--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -3,9 +3,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Kontakt</h2>
-                <p>Ich freue mich über nette Nachrichten. Am besten per Mail.</p>
-                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>, <a href="mail@stefantrauth.de.asc">PGP</a>
-                </p>
+                <p>Ich freue mich über nette Nachrichten.</p>
+                <p id="meltmail"></p>
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
                     <li>
